WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157977
RELEASE_ASSERT(TestController::singleton().isCurrentInvocation(testInvocation)) is sometimes hit when running tests
https://bugs.webkit.org/show_bug.cgi?id=157977
Summary
RELEASE_ASSERT(TestController::singleton().isCurrentInvocation(testInvocation...
Alexey Proskuryakov
Reported
2016-05-22 09:45:47 PDT
This assertion is sometimes hit when running tests: 0 com.apple.JavaScriptCore 0x000000010f0eeaee WTFCrash + 62 1 WebKitTestRunner 0x000000010ef0c5bf 0x10eeff000 + 54719 2 com.apple.WebKit 0x000000010f9a11f9 std::__1::__function::__func<WKPageForceRepaint::$_1, std::__1::allocator<WKPageForceRepaint::$_1>, void (WebKit::CallbackBase::Error)>::operator()(WebKit::CallbackBase::Error&&) + 77 3 com.apple.WebKit 0x000000010f85f9e4 WebKit::GenericCallback<>::performCallbackWithReturnValue() + 44 4 com.apple.WebKit 0x000000010f78ef21 WebKit::WebPageProxy::voidCallback(unsigned long long) + 45 5 com.apple.WebKit 0x000000010f9366c6 WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&) + 9224 6 com.apple.WebKit 0x000000010f7f7ed5 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::MessageDecoder&) + 113
rdar://problem/20874156
Attachments
proposed fix
(2.87 KB, patch)
2016-05-22 09:53 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2016-05-22 09:53:55 PDT
Created
attachment 279550
[details]
proposed fix I'm not quite certain if this eliminates every possibility for race, but it does seem to prevent the crash in my testing.
David Kilzer (:ddkilzer)
Comment 2
2016-05-22 15:33:38 PDT
Comment on
attachment 279550
[details]
proposed fix r=me
David Kilzer (:ddkilzer)
Comment 3
2016-05-22 15:35:41 PDT
<
rdar://problem/20874156
>
WebKit Commit Bot
Comment 4
2016-05-22 15:54:18 PDT
Comment on
attachment 279550
[details]
proposed fix Clearing flags on attachment: 279550 Committed
r201263
: <
http://trac.webkit.org/changeset/201263
>
WebKit Commit Bot
Comment 5
2016-05-22 15:54:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug